--- a/.github/workflows/primeira-pipeline.yml
+++ b/.github/workflows/primeira-pipeline.yml
@@ -13,6 +13,8 @@ on:
 jobs:
   Trabalho1:
     name: Job 1
+    #Apenas executa se outro trabalho ser executado
+    needs: Trabalho3
     runs-on: ubuntu-latest
     #Agora irei programar os passos do script
     steps:
